avoid pagebreaks inside

--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ section h2 {
 	margin: 0 0 1em;
 	padding: 0 0 1em;
 	border-bottom: 1px solid #F2EBEC;
+	page-break-inside: avoid;
 }
 
 .item:last-child {
